plugins {
    java
}

repositories {
    mavenCentral()
    maven {
        url = uri("http://repo.maven.apache.org/maven2")
    }
}

dependencies {
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
}
